// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageSliderWidget /> should map the correct image settings to the components 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ImageSliderWidget
    className={null}
    settings={
      {
        "autostart": false,
        "delay": 7000,
        "images": [
          {
            "image": "http://placehold.it/350x150",
            "link": "http://example.com",
          },
          {
            "image": "http://placehold.it/10x10",
            "link": "http://other.example.com",
          },
        ],
        "loop": false,
        "pagination": true,
      }
    }
  >
    <Swiper
      className={null}
      indicators={true}
      loop={false}
    >
      <SwiperItem
        key="http://placehold.it/350x150"
      >
        <Link
          className="css-63oe3q"
          href="http://example.com"
        >
          <img
            className={
              {
                "data-css-1rozygh": "",
              }
            }
            data-test-id="link: http://example.com"
            src="http://placehold.it/350x150"
          />
        </Link>
      </SwiperItem>
      <SwiperItem
        key="http://placehold.it/10x10"
      >
        <Link
          className="css-63oe3q"
          href="http://other.example.com"
        >
          <img
            className={
              {
                "data-css-1rozygh": "",
              }
            }
            data-test-id="link: http://other.example.com"
            src="http://placehold.it/10x10"
          />
        </Link>
      </SwiperItem>
    </Swiper>
  </ImageSliderWidget>
</Provider>
`;

exports[`<ImageSliderWidget /> should render no slider with just a single image 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ImageSliderWidget
    className={null}
    settings={
      {
        "autostart": false,
        "delay": 7000,
        "images": [
          {
            "image": "http://placehold.it/350x150",
            "link": "http://example.com",
          },
        ],
        "loop": false,
        "pagination": true,
      }
    }
  >
    <div
      className={null}
    >
      <Link
        className="css-63oe3q"
        data-test-id="withLink"
        href="http://example.com"
      >
        <img
          className={
            {
              "data-css-1rozygh": "",
            }
          }
          data-test-id="link : undefined"
          src="http://placehold.it/350x150"
        />
      </Link>
    </div>
  </ImageSliderWidget>
</Provider>
`;

exports[`<ImageSliderWidget /> should render the images unlinked if no link is set 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ImageSliderWidget
    className={null}
    settings={
      {
        "autostart": false,
        "delay": 7000,
        "images": [
          {
            "image": "http://placehold.it/350x150",
            "link": null,
          },
        ],
        "loop": false,
        "pagination": true,
      }
    }
  >
    <div
      className={null}
    >
      <img
        className={
          {
            "data-css-1rozygh": "",
          }
        }
        data-test-id="link : undefined"
        src="http://placehold.it/350x150"
      />
    </div>
  </ImageSliderWidget>
</Provider>
`;

exports[`<ImageSliderWidget /> should render the images with links 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ImageSliderWidget
    className={null}
    settings={
      {
        "autostart": false,
        "delay": 7000,
        "images": [
          {
            "image": "http://placehold.it/350x150",
            "link": null,
          },
          {
            "image": "http://placehold.it/10x10",
            "link": "http://other.example.com",
          },
        ],
        "loop": false,
        "pagination": true,
      }
    }
  >
    <Swiper
      className={null}
      indicators={true}
      loop={false}
    >
      <SwiperItem
        key="http://placehold.it/350x150"
      >
        <img
          className={
            {
              "data-css-1rozygh": "",
            }
          }
          data-test-id="link: null"
          src="http://placehold.it/350x150"
        />
      </SwiperItem>
      <SwiperItem
        key="http://placehold.it/10x10"
      >
        <Link
          className="css-63oe3q"
          href="http://other.example.com"
        >
          <img
            className={
              {
                "data-css-1rozygh": "",
              }
            }
            data-test-id="link: http://other.example.com"
            src="http://placehold.it/10x10"
          />
        </Link>
      </SwiperItem>
    </Swiper>
  </ImageSliderWidget>
</Provider>
`;

exports[`<ImageSliderWidget /> should render the slider with the correct number of images 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ImageSliderWidget
    className={null}
    settings={
      {
        "autostart": false,
        "delay": 7000,
        "images": [
          {
            "image": "http://placehold.it/350x150",
            "link": "http://example.com",
          },
          {
            "image": "http://placehold.it/10x10",
            "link": "http://other.example.com",
          },
        ],
        "loop": false,
        "pagination": true,
      }
    }
  >
    <Swiper
      className={null}
      indicators={true}
      loop={false}
    >
      <SwiperItem
        key="http://placehold.it/350x150"
      >
        <Link
          className="css-63oe3q"
          href="http://example.com"
        >
          <img
            className={
              {
                "data-css-1rozygh": "",
              }
            }
            data-test-id="link: http://example.com"
            src="http://placehold.it/350x150"
          />
        </Link>
      </SwiperItem>
      <SwiperItem
        key="http://placehold.it/10x10"
      >
        <Link
          className="css-63oe3q"
          href="http://other.example.com"
        >
          <img
            className={
              {
                "data-css-1rozygh": "",
              }
            }
            data-test-id="link: http://other.example.com"
            src="http://placehold.it/10x10"
          />
        </Link>
      </SwiperItem>
    </Swiper>
  </ImageSliderWidget>
</Provider>
`;
